# fv3net

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  2019-07-17-FV3_DYAMOND_0.25deg_15minute_regrid_1degree.zarr.dvc  CODEOWNERS  CONTRIBUTING.md  DELETE.txt  DELETEME  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  README.rst  RELEASE.rst  Snakefile  Snaketest.py  TODO_REFACTOR  _debug_train_model.sh  _dev_train_with_fine_res.sh  activateEnv  argo-fv3net.yml  argo-run-fv3.yaml  build_environment.sh  catalog.yml  check_types.sh  cloudbuild.yaml  conda-lock.yml  conftest.py  constraints.txt  dataflow.sh  debug.sh  default.nix  delete_cluster.sh  develop-classification.py  (+48 more)
workflows/end_to_end/: Dockerfile  Makefile  README.md  dataflow.py  end_to_end.yaml  entrypoint.sh  example-workflow-config.yaml  full-workflow-config.yaml  generate_samples.py  get_experiment_args.py  get_experiment_steps_and_args.py  get_step_inputs.py  print_samples.py  pyproject.toml  requirements.txt  submit_workflow.sh  test-workflow-config.yaml  test_generate_samples.py  test_get_experiment_steps_and_args.py  utils.py  workflow-config-deep-off-fv3atm.yaml  workflow-config-physics-on.yaml
workflows/end_to_end/example/: job.yaml  time-control.yaml
workflows/end_to_end/kustomization/: argo_offline_diagnostics.yml  coarsen_c384_diagnostics.yml  diag_table_prognostic  end_to_end.yaml  job.yaml  kustomization.yaml  one_step_jobs.yml  prognostic_run.yml  service-account.yml  test_sklearn_variable_names.yml  time-control.yaml  train_sklearn_model.yml
workflows/fine_res_budget/: README.md  README.rst  argo.yaml  budgets.py  compute.py  dataflow.py  download.py  merge_restarts_and_diags.py  pyproject.toml  setup.py  submit-k8s.yaml  submit.sh  test.py  test_data.py  test_dataflow.py  xarray_beam.py
workflows/fine_res_budget/budget/: __main__.py  budgets.py  config.py  data.py  pipeline.py
workflows/fine_res_budget/src/: __main__.py
workflows/fine_res_budget/tests/: area.json  atmos_ave_schema.json  atmos_avg.json  conftest.py  diag.json  gfsphysics.json  gfsphysics_schema.json  regenerate_schema.py  restart.json  test_data.py  test_fine_res_budget.py
workflows/one_step_diags/: README.rst  one_step_diags_default_config.yaml  one_step_diags_ex_config.yaml  pyproject.toml  submit_diags_dataflow.sh  submit_diags_direct.sh  submit_diags_job.sh
workflows/one_step_diags/one_step_diags/: __init__.py  __main__.py  config.py  constants.py  data_funcs_one_step.py  diagnostics_config.yaml  generate_report.py  pipeline.py  plots.py  plotting_funcs_one_step.py  utils.py
workflows/one_step_diags/tests/: test_one_step_diags.py
workflows/prognostic_run_diags/: Dockerfile  Makefile  README.md  add_derived.py  arg.yml  argo.yaml  combined.ipynb  config.py  constants.py  dag.py  derived.py  diurnal_cycle.py  entrypoint.sh  entrypoint_diags.sh  entrypoint_movie.sh  example_serve.py  generate_movie_stills.py  generate_report.py  index.ipynb  load_diagnostic_data.py  make_argo_args.py  metrics.py  metrics.yaml  prognostic-run-diags-v1.ipynb  putfile.py  pyproject.toml  report.py  requirements.txt  run.sh  run_all.py  run_all.sh  rundirs.json  rundirs.yml  save_prognostic_run_diags.py  savediags.py  setup.py  stitch_movie_stills.sh  test.sh  test_generate_movie_stills.py  test_generate_report.py  (+7 more)
workflows/prognostic_run_diags/docs/: api.rst  cli.rst  conf.py  data.rst  developing.rst  index.rst  usage.rst
workflows/prognostic_run_diags/fv3net/artifacts/: cli.py  generate.py  query.py  report.py  report_search.py
workflows/prognostic_run_diags/scripts/: memoized_compute_diagnostics.sh
workflows/prognostic_run_diags/tests/: test_computed_diagnostics.py  test_generate_movie_stills.py  test_generate_report.py  test_integration.sh  test_load_diag_data.py  test_metrics.py  test_registry.py  test_rundirs.py  test_savediags.py  test_transform.py
workflows/prognostic_run_diags/tests/_regtest_outputs/: test_load_diag_data.test_Simulations[simulation0].out  test_load_diag_data.test_evaluation_pair_to_input_data.out  test_load_diag_data.test_load_verification_and_input_data.out  test_rundirs.test_render_links.out
workflows/prognostic_run_diags/tests/offline/: test__keras_loss_history.py  test_compute_diags.py  (+1 more)
(+3684 files in other folders)
