[tool.poetry]
name = "fv3net"
version = "0.1.1"
description = ""
authors = ["Vulcan, LLC"]

[[tool.poetry.packages]]
include = "fv3net"

[[tool.poetry.packages]]
include = "vcm"
from = "external/vcm"

[tool.poetry.dependencies]
python = "^3.7"
f90nml = "^1.1.2"
fsspec = "^0.7.3"
gcsfs = "^0.6.2"
intake = "^0.5.5"
scikit-image = "^0.17.2"
metpy = "^0.12.1"
toolz = "^0.10.0"
xarray = "^0.15.1"
xgcm = "^0.3.0"
zarr = "^2.4.0"
numba = "^0.49.1"
cftime = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
