[tool.poetry]
name = "fv3net"
version = "0.1.0"
description = ""
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vcm = {path = "external/vcm"}
fv3gfs-wrapper = {path = "external/fv3gfs-wrapper"}
fv3gfs-util = {path = "external/fv3gfs-util"}
loaders = {path = "external/loaders"}
fv3fit = {path = "external/fv3fit"}
synth = {path = "external/synth"}
prognostic-run = {path = "workflows/prognostic_c48_run"}
fv3kube = {path = "external/fv3kube"}
report = {path = "external/report"}
diagnostics-utils = {path = "external/diagnostics_utils"}
fv3viz = {path = "external/fv3viz"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
monotonic = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
