[tool.poetry]
name = "end_to_end"
version = "0.1.0"
description = "End to end workflow manager"
authors = ["Vulcan, LLC"]

[tool.poetry.dependencies]
python = "^3.7"
vcm = {path = "../../external/vcm"}
apache_beam = {extras = ["gcp"], version = "^2.20.0"}
kubernetes = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
