[tool.poetry]
name = "fine_res_budget"
version = "0.1.0"
description = "Compute Q1 and Q2 from the ShiELD physics diagnostics"
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
vcm = {path = "../../external/vcm"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
