[tool.poetry]
name = "fine_res_budget"
version = "0.1.0"
description = ""
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
vcm = {path = "../../external/vcm"}
mappm = {path = "../../external/vcm/external/mappm"}
xarray = "^0.15.1"
fsspec = "^0.7.3"
gcsfs = "^0.6.2"
zarr = "^2.4.0"
apache_beam = {extras = ["gcp"], version = "^2.20.0"}
synth = {path = "../../external/synth"}

[tool.poetry.dev-dependencies]
synth = {path = "../../external/synth"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
