[tool.poetry]
name = "one_step_diags"
version = "0.1.0"
description = ""
authors = ["Brian Henn <brianh@vulcan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
xarray = "0.15.1"
numpy = "1.18.3"
zarr = "2.4.0"
pyyaml = "5.3"
scipy = "1.4.1"
matplotlib = "3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
