[tool.poetry]
name = "prognostic_run_diags"
version = "0.1.0"
description = ""
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
holoviews = "^1.13.2"
xarray = "^0.15.1"
fsspec = "^0.7.3"
gcsfs = "^0.6.1"
bokeh = "^2.0.2"
report = {path = "../../external/report", extras = ["holoviews"]}
h5netcdf = "^0.8.0"
cftime = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
ipython = "^7.13.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
